@@ -69,9 +69,9 @@ public class SuperKoalio extends GdxTest {
 	private OrthogonalTiledMapRenderer renderer;
 	private OrthographicCamera camera;
 	private Texture koalaTexture;
-	private Animation stand;
-	private Animation walk;
-	private Animation jump;
+	private Animation<TextureRegion> stand;
+	private Animation<TextureRegion> walk;
+	private Animation<TextureRegion> jump;
 	private Koala koala;
 	private Pool<Rectangle> rectPool = new Pool<Rectangle>() {
 		@Override
